--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -7,7 +7,8 @@ body {
 
 .home-body {
 
-    background-color: #393E46;
+    /* background-color: #393E46; */
+    background-color: #EEEEEE;
     width: 85%;
     margin: auto;
 }
@@ -15,22 +16,32 @@ body {
 .header {
     padding: 20px;
     text-align: center;
-    color: #EEEEEE;
+    color: #393E46;
     font-family: "Monsterrat", sans-serif;
-
+    text-decoration: underline;
 }
 
 .post-holder a {
-    color: #EEEEEE;
+    color: #393E46;
     text-decoration: none;
     font-family: "Source Sans Pro", sans-serif;
+    text-align: center;
+}
 
+.post-holder {
+    border-style: solid;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 4%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .posts-container {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    text-align: center;
+
 }
 
 .cc10 {
@@ -40,4 +51,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.post-title {
+    text-decoration: underline;
 }
