Started Character Suggestion modules. Need to work on Pagination to help load times.

--- a/react-app/src/components/Post/PostPage/index.css
+++ b/react-app/src/components/Post/PostPage/index.css
@@ -186,3 +186,11 @@
     display: flex;
     align-items: center;
 }
+
+.comment-text {
+    margin: 15px;
+}
+
+.character-icon {
+    height: 100px;
+}
