--- a/react-app/src/components/Post/PostPage/index.css
+++ b/react-app/src/components/Post/PostPage/index.css
@@ -194,3 +194,21 @@
 .character-icon {
     height: 100px;
 }
+
+.character-holder {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.pagination-justify-content-center {
+    display: flex;
+    flex-direction: row-reverse;
+
+}
+
+.page-item {
+    list-style-type: none;
+    font-family: "Monsterrat", sans-serif;
+    cursor: pointer;
+    margin: 0.938rem;
+}
