--- a/react-app/src/components/Post/PostPage/index.css
+++ b/react-app/src/components/Post/PostPage/index.css
@@ -59,16 +59,22 @@
     padding: 20px;
 }
 
+.post-edit-delete {
+    display: flex;
+    justify-content: center;
+}
+
 .comment {
     width: 25%;
+    height: 25%;
     margin: 1.25rem;
     border-radius: 5%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    /* flex-wrap: wrap;
+    justify-content: space-around; */
 }
 
 .comment-container {
@@ -111,6 +117,7 @@
     background-color: #f8f8f8;
     font-size: 16px;
     resize: none;
+    margin: 0.625rem;
 }
 
 
@@ -166,10 +173,13 @@
     margin-left: 20px;
 }
 
-.comment-container .comment p {
+.comment-text {
     font-family: "Sans Serif Pro", sans-serif;
     color: #393E46;
-    margin-left: 20px;
+    text-align: center;
+    display: inline-block;
+    word-break: break-word;
+    margin: 0 10px 0 10px;
 }
 
 .like-button {
