Removed alerts for presentation sake. Try to make Modals.

--- a/react-app/src/components/Post/PostPage/index.css
+++ b/react-app/src/components/Post/PostPage/index.css
@@ -179,7 +179,7 @@
     text-align: center;
     display: inline-block;
     word-break: break-word;
-    margin: 0 10px 0 10px;
+    margin: 0 10px 10px 10px;
 }
 
 .like-button {
